option('tests', type: 'feature', description: 'Build tests')

option('uboot-env', type: 'boolean',
       description: 'Update u-boot env for MAC changes')
option('default-link-local-autoconf', type: 'string',
       description: 'Enable link local autoconfiguration by default')
option('default-ipv6-accept-ra', type: 'boolean',
       description: 'Accept router advertisements by default')
option('sync-mac', type: 'boolean',
       description: 'Sync mac address with phosphor-inventory-manager')
option('hyp-nw-config', type : 'boolean',
       description : 'ibm-oem: Enable the hypervisor network manager')
option('persist-mac', type: 'boolean',
       description: 'Permit the MAC address to be written to the systemd.network config')
option('force-sync-mac', type: 'boolean',
       description: 'Force sync mac address no matter is first boot or not')
option('enable-advanced-route', type: 'boolean', description: 'Enable advanced route or not')
option('ncsi-keep-phy-link-up', type: 'boolean', description: 'Enable NCSI Keep PHY link up or not')
option('ncsi-flow-control', type: 'boolean', description: 'Enable NCSI flow control or not')
option('enable-ncsi', type: 'boolean', description: 'Enable NCSI Feature or not')
option('default-ncsi-interface', type: 'string', description: 'Default NCSI interface')
option('enable-system-firewall', type: 'boolean', description: 'Enable system firewall rules or not')
option('enable-phy-configuration', type: 'boolean', description: 'Enable phy configuration feature or not')
option('enable-bond-feature', type: 'boolean', description: 'Enable bond feature or not')
option('enable-nsupdate-feature', type: 'boolean', description: 'Enable nsupdate feature or not')
option('enable-tsig-feature', type: 'boolean', description: 'Enable TSIG feature or not')
